--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,13 @@ dev = [
   "pre-commit>=4.2.0",
   "PyGithub>=2.7.0",
 ]
+docs = [
+  "sphinx>=7.2.6",
+  "furo>=2023.9.10",
+  "sphinx-autobuild>=2021.3.14",
+  "myst-parser[linkify]>=2.0.0",
+  "autodocsumm>=0.2.9",
+]
 
 [project.urls]
 Homepage = "https://github.com/kubeflow/sdk"
